--- a/assets/css/partials/_structure.scss
+++ b/assets/css/partials/_structure.scss
@@ -105,6 +105,10 @@ html {
     scroll-behavior: smooth;
 }
 
+video {
+    pointer-events: none;
+}
+
 body {
     color: $medium-text;
     margin: 0;
@@ -207,6 +211,7 @@ h3 {
     color: $bg;
     line-height: 1.1;
     letter-spacing: -0.2px;
+    font-family: Libre Franklin;
     @media screen and (max-width: 991px) {
         line-height: 1.2;
     }
@@ -295,7 +300,7 @@ nav#desktop {
     a {
         list-style: none;
         text-align: center;
-        padding-right: 2rem;
+        padding-right: 2.5rem;
         letter-spacing: 0.1rem;
         color: white;
         display: inline-block;
@@ -329,7 +334,109 @@ nav#desktop {
         z-index: 4;
         border-radius: 42px;
     }
-    .inquire {}
+    .inquire {
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+    }
+}
+
+.wt-btn_sign {
+    font-size: 1.1rem;
+    font-family: Work Sans;
+    font-style: italic;
+    font-weight: bold;
+    letter-spacing: -.21px;
+    white-space: nowrap;
+    -webkit-transition: color .3s;
+    -o-transition: color .3s;
+    -moz-transition: color .3s;
+    transition: color .3s;
+    // line-height: 20px;
+    background: transparent;
+    border: 1px solid #FF9900;
+    // height: 45px;
+    padding: 5px 10px;
+    -webkit-border-radius: 22px;
+    -moz-border-radius: 22px;
+    border-radius: 22px;
+}
+
+.wt-btn_sign:hover {
+    color: white;
+    background: #FF9900;
+}
+
+.wt-btn_sign-bound {
+    display: block;
+    overflow: hidden;
+}
+
+.wt-btn_sign-bound span {
+    position: relative;
+    display: inline-block;
+    padding: 0 22px;
+    color: #FF9900;
+    text-transform: uppercase;
+    -webkit-animation: wt-btn_sign-marquee 2s linear infinite;
+    -moz-animation: wt-btn_sign-marquee 2s linear infinite;
+    -o-animation: wt-btn_sign-marquee 2s linear infinite;
+    animation: wt-btn_sign-marquee 2s linear infinite;
+}
+
+.wt-btn_sign-bound span:hover {
+    color: white;
+    background: #FF9900;
+}
+
+.wt-btn_sign-bound span:after {
+    content: attr(data-text);
+    position: absolute;
+    left: 100%;
+    padding: 0 23px;
+}
+
+@-webkit-keyframes wt-btn_sign-marquee {
+    0% {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0)
+    }
+    100% {
+        -webkit-transform: translate3d(-100%, 0, 0);
+        transform: translate3d(-100%, 0, 0)
+    }
+}
+
+@-moz-keyframes wt-btn_sign-marquee {
+    0% {
+        -moz-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0)
+    }
+    100% {
+        -moz-transform: translate3d(-100%, 0, 0);
+        transform: translate3d(-100%, 0, 0)
+    }
+}
+
+@-o-keyframes wt-btn_sign-marquee {
+    0% {
+        transform: translate3d(0, 0, 0)
+    }
+    100% {
+        transform: translate3d(-100%, 0, 0)
+    }
+}
+
+@keyframes wt-btn_sign-marquee {
+    0% {
+        -webkit-transform: translate3d(0, 0, 0);
+        -moz-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0)
+    }
+    100% {
+        -webkit-transform: translate3d(-100%, 0, 0);
+        -moz-transform: translate3d(-100%, 0, 0);
+        transform: translate3d(-100%, 0, 0)
+    }
 }
 
 nav#mobile {
@@ -338,12 +445,13 @@ nav#mobile {
     right: 0;
     margin: 0 auto;
     z-index: 25;
-    padding: 1rem 1rem;
+    padding: 0 1rem;
     position: absolute;
     .logo-wrapper {
         width: 150px;
         height: auto;
-        margin-left: 0.5rem;
+        // margin-left: 5%;
+        padding-left: 15px;
         img {
             width: 100%;
             height: 100%;
@@ -439,7 +547,7 @@ nav#mobile {
         opacity: 0.7;
     }
     svg {
-        stroke: $c1;
+        stroke: red;
         transition: .2s;
         height: 30px;
         width: 30px;
@@ -501,32 +609,36 @@ nav#mobile {
 }
 
 .hamburger-box {
-    width: 15px;
-    height: 20px;
+    width: 57px;
+    height: 57px;
     display: inline-block;
     position: relative;
     align-items: center;
     justify-content: center;
+    border-radius: 50%;
+    background-color: white;
+    right: 30px;
+    top: 10px;
 }
 
 .hamburger-inner {
-    display: block;
     top: 50%;
-    margin-top: -2px;
+    margin-top: 15px;
     height: 2px;
-    width: 24px;
-    background-color: #fff;
+    width: 23px;
+    background-color: black;
     position: absolute;
     transition-property: transform;
     transition-duration: 0.15s;
     transition-timing-function: ease;
     align-items: center;
     justify-content: center;
+    right: 17px;
     &::before,
     &::after {
         height: 2px;
-        width: 24px;
-        background-color: #fff;
+        width: 23px;
+        background-color: black;
         position: absolute;
         transition-property: transform;
         transition-duration: 0.15s;
@@ -547,14 +659,14 @@ nav#mobile {
 
 .hamburger--spring {
     .hamburger-inner {
-        top: 5px;
+        top: 8px;
         transition: background-color 0s 0.13s linear;
         &::before {
-            top: 8px;
+            top: 5px;
             transition: top 0.1s 0.2s cubic-bezier(0.33333, 0.66667, 0.66667, 1), transform 0.13s cubic-bezier(0.55, 0.055, 0.675, 0.19);
         }
         &::after {
-            top: 16px;
+            top: 10px;
             transition: top 0.2s 0.2s cubic-bezier(0.33333, 0.66667, 0.66667, 1), transform 0.13s cubic-bezier(0.55, 0.055, 0.675, 0.19);
         }
     }
@@ -562,12 +674,12 @@ nav#mobile {
         transition-delay: 0.22s;
         background-color: transparent !important;
         &::before {
-            top: 0;
+            top: -5px;
             transition: top 0.1s 0.15s cubic-bezier(0.33333, 0, 0.66667, 0.33333), transform 0.13s 0.22s cubic-bezier(0.215, 0.61, 0.355, 1);
             transform: translate3d(0, 10px, 0) rotate(45deg);
         }
         &::after {
-            top: 0;
+            top: -5px;
             transition: top 0.2s cubic-bezier(0.33333, 0, 0.66667, 0.33333), transform 0.13s 0.22s cubic-bezier(0.215, 0.61, 0.355, 1);
             transform: translate3d(0, 10px, 0) rotate(-45deg);
         }
@@ -674,8 +786,8 @@ footer {
 
 .container {
     @media screen and (max-width: 575px) {
-        padding-left: 30px;
-        padding-right: 30px;
+        padding-left: 10px;
+        padding-right: 10px;
     }
 }
 
@@ -686,7 +798,8 @@ footer {
     font-size: 1rem;
     font-weight: 500;
     transition: 250ms all ease;
-    border: 1px solid transparent;
+    border: 1px solid white;
+    border-style: solid;
     display: inline-block;
     &.solid {
         background-color: $c1;
